log
lu., 14 de abr. de 2025 21:48:49: 
 tests:  0|6
total_score: 0/70
eeef3b7
lu., 14 de abr. de 2025 22:51:31: 
 hashmap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
3a3507d
lu., 14 de abr. de 2025 23:11:03: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
cc8938d
Tue, Apr 15, 2025 12:27:55 PM: 
 tests:  1|5
total_score: 10/70
434ca8a
Tue, Apr 15, 2025 12:51:23 PM: 
 hashmap.c | 35 ++++++++++++++++++++++++++++++++---
 1 file changed, 32 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
891f5fc
Tue, Apr 15, 2025  1:03:16 PM: 
 hashmap.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:57:10: error: unused variable 'datoOriginal' [-Werror=unused-variable]
     long datoOriginal = dato;
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
c1d1cea
Tue, Apr 15, 2025  1:03:35 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:57:10: error: unused variable 'datoOriginal' [-Werror=unused-variable]
     long datoOriginal = dato;
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
1447ffc
